src/test/deca/syntax/valid/resultats/test18_boolean_monster-lex.res
'{': [@0,243:243='{',<36>,14:0]
IDENT: [@1,246:252='boolean',<26>,15:1]
IDENT: [@2,254:254='b',<26>,15:9]
'=': [@3,256:256='=',<29>,15:11]
INT: [@4,258:258='1',<1>,15:13]
'<': [@5,260:260='<',<27>,15:15]
INT: [@6,262:262='1',<1>,15:17]
'>': [@7,264:264='>',<28>,15:19]
INT: [@8,266:266='1',<1>,15:21]
'>=': [@9,268:269='>=',<42>,15:23]
INT: [@10,271:271='1',<1>,15:26]
'<=': [@11,273:274='<=',<43>,15:28]
INT: [@12,276:276='1',<1>,15:31]
';': [@13,277:277=';',<39>,15:32]
'}': [@14,279:279='}',<37>,16:0]
