src/test/deca/syntax/invalid/resultats/test16_decl-lex.res
'{': [@0,287:287='{',<36>,14:0]
IDENT: [@1,290:292='int',<26>,15:1]
IDENT: [@2,294:294='x',<26>,15:5]
',': [@3,295:295=',',<33>,15:6]
IDENT: [@4,296:296='y',<26>,15:7]
',': [@5,297:297=',',<33>,15:8]
IDENT: [@6,298:298='z',<26>,15:9]
',': [@7,299:299=',',<33>,15:10]
';': [@8,300:300=';',<39>,15:11]
'}': [@9,302:302='}',<37>,16:0]
